<?xml version="1.0"?>
<package>
  <name>sigproc_test</name>
  <version>0.0.0</version>
  <description>sigproc_test</description>

  <maintainer email="antosidi646@gmail.com">Slifer64</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sigproc_lib</build_depend>
  <build_depend>plot_lib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sigproc_lib</run_depend>
  <run_depend>plot_lib</run_depend>

</package>
